src/objects/Traffic_Analysis_Dashboard__c.object
<CustomObject>
    <description>Analyzing DFP traffic as tied to actual revenue.</description>
    <fields>
        <fullName>Average_Pageviews_Per_Visit__c</fullName>
        <formula>Pageviews__c / Visits__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Pageviews Per Visit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Visit_Length__c</fullName>
        <label>Average Visit Length</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bounce_Rate__c</fullName>
        <label>Bounce Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Bounces__c</fullName>
        <label>Bounces</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Brand_Group__c</fullName>
        <label>Brand Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Residential Construction</fullName>
                </value>
                <value>
                    <fullName>Residential Remodeling</fullName>
                </value>
                <value>
                    <fullName>Commercial Design</fullName>
                </value>
                <value>
                    <fullName>Commercial Construction</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Aquatics International</fullName>
                </value>
                <value>
                    <fullName>Architect</fullName>
                </value>
                <value>
                    <fullName>Architectural Lighting</fullName>
                </value>
                <value>
                    <fullName>Builder</fullName>
                </value>
                <value>
                    <fullName>Builder House Plans</fullName>
                </value>
                <value>
                    <fullName>Concrete Construction</fullName>
                </value>
                <value>
                    <fullName>Concrete Producer</fullName>
                </value>
                <value>
                    <fullName>Custom Home</fullName>
                </value>
                <value>
                    <fullName>Dream Home Source</fullName>
                </value>
                <value>
                    <fullName>ebuild</fullName>
                </value>
                <value>
                    <fullName>Eco Building Pulse</fullName>
                </value>
                <value>
                    <fullName>Eplans</fullName>
                </value>
                <value>
                    <fullName>Floor Plans</fullName>
                </value>
                <value>
                    <fullName>Housing Finance</fullName>
                </value>
                <value>
                    <fullName>HWE: Hanley Wood University</fullName>
                </value>
                <value>
                    <fullName>Journal of Light Construction</fullName>
                </value>
                <value>
                    <fullName>Masonry Construction</fullName>
                </value>
                <value>
                    <fullName>Multi Family Executive</fullName>
                </value>
                <value>
                    <fullName>Pool and Spa News</fullName>
                </value>
                <value>
                    <fullName>Pro Deck Builder</fullName>
                </value>
                <value>
                    <fullName>Pro Sales</fullName>
                </value>
                <value>
                    <fullName>Public Works</fullName>
                </value>
                <value>
                    <fullName>Remodeling</fullName>
                </value>
                <value>
                    <fullName>Replacement Contractor</fullName>
                </value>
                <value>
                    <fullName>Residential Architect</fullName>
                </value>
                <value>
                    <fullName>Tools of the Trade</fullName>
                </value>
                <value>
                    <fullName>www.homeplans.com</fullName>
                </value>
                <value>
                    <fullName>www.houseplans.com</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medium__c</fullName>
        <label>Medium</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Organic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Visit__c</fullName>
        <label>New Visit %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>New_Visits__c</fullName>
        <label>New Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pageviews__c</fullName>
        <label>Pageviews</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Social_Network__c</fullName>
        <label>Social Network</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Academia</fullName>
                </value>
                <value>
                    <fullName>ActiveRain</fullName>
                </value>
                <value>
                    <fullName>AddThis</fullName>
                </value>
                <value>
                    <fullName>Allrecipes</fullName>
                </value>
                <value>
                    <fullName>Ameba</fullName>
                </value>
                <value>
                    <fullName>Answerbag</fullName>
                </value>
                <value>
                    <fullName>Askville</fullName>
                </value>
                <value>
                    <fullName>Before It&apos;s News</fullName>
                </value>
                <value>
                    <fullName>BigTent</fullName>
                </value>
                <value>
                    <fullName>bitly</fullName>
                </value>
                <value>
                    <fullName>BlogGang</fullName>
                </value>
                <value>
                    <fullName>Blogger</fullName>
                </value>
                <value>
                    <fullName>BlogHer</fullName>
                </value>
                <value>
                    <fullName>BuzzFeed</fullName>
                </value>
                <value>
                    <fullName>CafeMom</fullName>
                </value>
                <value>
                    <fullName>Care2</fullName>
                </value>
                <value>
                    <fullName>ChicagoNow</fullName>
                </value>
                <value>
                    <fullName>Cloob</fullName>
                </value>
                <value>
                    <fullName>cocolog</fullName>
                </value>
                <value>
                    <fullName>Cyworld</fullName>
                </value>
                <value>
                    <fullName>Delicious</fullName>
                </value>
                <value>
                    <fullName>deviantART</fullName>
                </value>
                <value>
                    <fullName>Digg</fullName>
                </value>
                <value>
                    <fullName>Diigo</fullName>
                </value>
                <value>
                    <fullName>Disqus</fullName>
                </value>
                <value>
                    <fullName>Douban</fullName>
                </value>
                <value>
                    <fullName>Draugiem.lv</fullName>
                </value>
                <value>
                    <fullName>Echo</fullName>
                </value>
                <value>
                    <fullName>Elftown</fullName>
                </value>
                <value>
                    <fullName>Experience Project</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>(direct)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Desktop/Mobile</fullName>
                </value>
                <value>
                    <fullName>Social</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Visits__c</fullName>
        <label>Unique Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visits__c</fullName>
        <label>Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Traffic Analysis Dashboard</label>
    <nameField>
        <label>Traffic Analysis Dashboard Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Traffic Analysis Dashboards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>